Cấu hình chung message response, sửa lại message validate